--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load blog_tags %}
 {% block main %}
     <article class="post post-{{ post.pk }}">
         <header class="entry-header">
@@ -9,7 +9,7 @@
                 <span class="post-date"><a href="#"><time class="entry-date"
                                                           datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>
                 <span class="post-author"><a href="#">{{ post.author }}</a></span>
-                <span class="comments-link"><a href="#">4 评论</a></span>
+                <span class="comments-link"><a href="#">{{ post.comment_set.count }} 评论</a></span>
                 <span class="views-count"><a href="#">{{ post.views }} 阅读</a></span>
             </div>
         </header>
@@ -85,3 +85,13 @@
         </ul>
     </div>
 {% endblock toc %}
+
+{% block tag %}
+<ul>
+{% for tag in post.tags.all %}
+<li><a href="{% url 'blog:tag' tag.pk %}">{{ tag.name }}</a></li>
+{% empty %}
+    暂无标签!
+{% endfor %}
+</ul>
+{% endblock tag%}
