--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- css -->
+    <style>
+        span.highlighted {
+            color: red;
+        }
+    </style>
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'blog/css/pace.css' %}">
@@ -52,7 +57,7 @@
                 <div id="header-search-box">
                     <a id="search-menu" href="#"><span id="search-icon" class="ion-ios-search-strong"></span></a>
                     <div id="search-form" class="search-form">
-                        <form role="search" method="get" id="searchform" action="{% url 'blog:search' %}">
+                        <form role="search" method="get" id="searchform" action="{% url 'haystack_search' %}">
                             <input type="search" name='q' placeholder="搜索" required>
                             <button type="submit"><span class="ion-ios-search-strong"></span></button>
                         </form>
