--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -5,8 +5,9 @@
         <header class="entry-header">
             <h1 class="entry-title">{{ post.title }}</h1>
             <div class="entry-meta">
-                <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
-                <span class="post-date"><a href="#"><time class="entry-date"
+                <span class="post-category"><a href="{%url 'blog:category' post.category.pk %}">{{ post.category.name }}</a></span>
+            
+                <span class="post-date"><a href="{% url 'blog:archives' post.create_time.year post.create_time.month %}"><time class="entry-date"
                                                           datetime="{{ post.create_time }}">{{ post.create_time }}</time></a></span>
                 <span class="post-author"><a href="#">{{ post.author }}</a></span>
                 <span class="comments-link"><a href="#">{{ post.comment_set.count }} 评论</a></span>
